Add price lookup and database H2
